# MSc-Thesis-Heston-Calibration-with-Analytical-Gradient

./: calibHeston++.txt  calibratedInfoNoDisp.txt
MatLab/Assignment COMP0043/: COMP0043_1920_MSP_AltAsmt_Q2a.xlsx  COMP0043_1920_MSP_AltAsmt_Q2b.xlsx  CarrMadanIntegrand.m  FFT_Heston.m  HestonPrice.m  HestonPriceCarrMadan.m  ex1.m  (+8 more)
cui/: HestonCalibrator.cpp  Makefile  hc
displacement/: CMakeLists.txt  Calibration.cpp  Calibration.h  EuropeanOption.cpp  EuropeanOption.h  SPXOption.cpp  SPXOption.h  VIXOption.cpp  VIXOption.h  main.cpp
ex1b/: CMakeLists.txt  Calibration.cpp  Calibration.h  EuropeanOption.cpp  EuropeanOption.h  Makefile  Market.cpp  Market.h  SPXOption.cpp  SPXOption.h  VIXOption.cpp  VIXOption.h  main  main.cpp
ex1c/: Calibration.cpp  Calibration.h  EuropeanOption.cpp  SPXOption.cpp  main.cpp
lin/: CFG.cpp  CMakeLists.txt  DIS.cpp  HestonCalibrator.cpp  Makefile  Makefile.vc  levmar.lib
mainProject/: CMakeLists.txt  Calibration.cpp  Calibration.h  EuropeanOption.cpp  EuropeanOption.h  Makefile  SPXOption.cpp  SPXOption.h  VIXOption.cpp  VIXOption.h  doublecomparison.cpp  doublecomparison.h  main.cpp  validation.cpp
marketDataCalibration/: CMakeLists.txt  Calibration.cpp  Calibration.h  EuropeanOption.cpp  EuropeanOption.h  SPXData.txt  SPXOption.cpp  SPXOption.h  VIXData.txt  VIXOption.cpp  VIXOption.h  calibPrices.csv  heston++Params.txt  heston++Prices.txt  hestonParams.txt  hestonPrices.txt  main.cpp  modelValH++.csv  ratesSPX.txt  ratesVIX.txt  utility.cpp  utility.h
trycui/: CMakeLists.txt  main.cpp
tryspace/: CMakeLists.txt  main.cpp
(+45 files in other folders)
